Use modular OpenCV build and remove avaje-jsonb-inject-plugin
avaje-jsonb-inject-plugin is incorrectly listed as a dependency of io.avaje:jsonb, and causes runtime crashes if the `--add-modules ALL-MODULE-PATH` option is used because it forces the JVM to try to load io.avaje.inject, which is a dependency injection library completely unrelated to JSON handling.